wui teacher submission code editor is copyable

--- a/wui/exercise.html
+++ b/wui/exercise.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
 
-                <div id="teacher-submission-wrapper" class="editor-wrapper" style="display: none">
+                <div id="teacher-submission-wrapper" class="editor-wrapper no-cursor" style="display: none">
                     <form>
                         <textarea id="teacher-submission-submission"></textarea>
                     </form>
