--- a/wui/spaproto.html
+++ b/wui/spaproto.html
@@ -21,11 +21,14 @@
 
 
 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/mode/python/python.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/addon/display/autorefresh.min.js"></script>
+<script src="build/kotlin-js-min/main/kotlin.js"></script>
+<script src="build/kotlin-js-min/main/wui.js"></script>
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
 </body>
 </html>
