--- a/wui/spaproto.html
+++ b/wui/spaproto.html
@@ -4,22 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lahendus</title>
-    <script src="js/pace.min.js"></script>
-    <link rel="stylesheet" href="css/pace.css">
+    <script src="/js/pace.min.js"></script>
+    <link rel="stylesheet" href="/css/pace.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/exercise.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/exercise.css"/>
 </head>
 <body>
-<div id="container"></div>
 
+<nav class="nav-center" role="navigation">
+    <div class="container">
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
+            <ul id="nav-mobile" class="hide-on-med-and-down">
+                <li><a class="nav-link" href="courses.html">Kursused</a></li>
+            </ul>
+        </div>
+    </div>
+    <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
+        <a href="#!">
+            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Kasutaja</span>
+        </a>
+    </div>
+</nav>
 
+<!-- Profile dropdown menu structure -->
+<ul id="profile-dropdown" class="dropdown-content">
+    <li><a href="https://idp.lahendus.ut.ee/auth/realms/master/account">Konto andmed</a></li>
+    <li><a id="logout-link">Logi välja</a></li>
+</ul>
 
+<div id="container">
+    <a href="/courses/12a/exercises">Exercises</a>
+    <a href="/courses">Courses</a>
 
-
+</div>
 
 
 
@@ -29,8 +51,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/mode/python/python.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/addon/display/autorefresh.min.js"></script>
-<script src="build/kotlin-js-min/main/kotlin.js"></script>
-<script src="build/kotlin-js-min/main/wui.js"></script>
+<script src="build/kotlin-js-min/main/kotlin.js"></script> <!-- Temporary, for local dev -->
+<script src="build/kotlin-js-min/main/wui.js"></script> <!-- Temporary, for local dev -->
+<script src="/js/kotlin.js"></script>
+<script src="/js/wui.js"></script>
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
 </body>
 </html>
