wui fix logo link

--- a/wui/spaproto.html
+++ b/wui/spaproto.html
@@ -18,7 +18,7 @@
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
+            <a href="/" class="brand-logo left"><img class="logo-img" src="/img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
             </ul>
