wui html testing links to outside container

--- a/wui/spaproto.html
+++ b/wui/spaproto.html
@@ -37,10 +37,14 @@
     <li><a id="logout-link">Logi välja</a></li>
 </ul>
 
-<div id="container">
+<div>
     <a href="/courses/12a/exercises">Exercises</a>
     <a href="/courses">Courses</a>
+    <a href="https://google.com">Googl</a>
+</div>
 
+<div id="container">
+    initial
 </div>
 
 
