wui refactor new static resources and legacy stuff into separate dirs

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lahendus</title>
-    <script src="/js/pace.min.js"></script>
-    <link rel="stylesheet" href="/css/pace.css">
+    <script src="/static/js/pace.min.js"></script>
+    <link rel="stylesheet" href="/static/css/pace.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.css"/>
-    <link rel="stylesheet" href="/css/main.css"/>
-    <link rel="stylesheet" href="/css/exercise.css"/>
+    <link rel="stylesheet" href="/static/css/main.css"/>
+    <link rel="stylesheet" href="/static/css/exercise.css"/>
 </head>
 <body>
 
 <nav class="nav-center" role="navigation">
     <div class="container">
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo left"><img class="logo-img" src="/img/main-logo.svg" alt="Lahendus"/></a>
+            <a href="/" class="brand-logo left"><img class="logo-img" src="/static/img/main-logo.svg" alt="Lahendus"/></a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li><a class="nav-link" href="courses.html">Kursused</a></li>
             </ul>
@@ -55,10 +55,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/mode/python/python.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/addon/display/autorefresh.min.js"></script>
-<script src="build/kotlin-js-min/main/kotlin.js"></script> <!-- Temporary, for local dev -->
-<script src="build/kotlin-js-min/main/wui.js"></script> <!-- Temporary, for local dev -->
-<script src="/js/kotlin.js"></script>
-<script src="/js/wui.js"></script>
+<script src="../build/kotlin-js-min/main/kotlin.js"></script> <!-- Temporary, for local dev -->
+<script src="../build/kotlin-js-min/main/wui.js"></script> <!-- Temporary, for local dev -->
+<script src="/static/js/kotlin.js"></script>
+<script src="/static/js/wui.js"></script>
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
 </body>
 </html>
