--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -43,10 +43,21 @@
     <a href="https://google.com">Googl</a>
 </div>
 
-<div id="container">
+<div id="container" class="container"> <!-- TODO: is class container needed? or refactor css to use id -->
     initial
 </div>
 
+
+<!-- Templates -->
+<script id="tm-stud-course-list" type="text/x-tm">
+<div class="card">
+    <div id="courses-list" class="collection">
+        {{#course}}
+        <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
+        {{/course}}
+    </div>
+</div>
+</script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
