--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -62,6 +62,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/mode/python/python.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/addon/display/autorefresh.min.js"></script>
 <script src="/static/js/kotlin.js"></script>
+<script src="/static/js/kotlinx-coroutines-core.js"></script>
 <script src="/static/js/kotlinx-serialization-kotlinx-serialization-runtime.js "></script>
 <script src="/static/js/wui.js"></script>
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
