--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -15,27 +15,9 @@
 </head>
 <body>
 
-<nav class="nav-center" role="navigation">
-    <div class="container">
-        <div class="nav-wrapper">
-            <a href="/" class="brand-logo left"><img class="logo-img" src="/static/img/main-logo.svg" alt="Lahendus"/></a>
-            <ul id="nav-mobile" class="hide-on-med-and-down">
-                <li><a class="nav-link" href="courses.html">Kursused</a></li>
-            </ul>
-        </div>
-    </div>
-    <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
-        <a href="#!">
-            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">Kasutaja</span>
-        </a>
-    </div>
-</nav>
+<div id="nav-wrap"></div>
 
-<!-- Profile dropdown menu structure -->
-<ul id="profile-dropdown" class="dropdown-content">
-    <li><a href="https://idp.lahendus.ut.ee/auth/realms/master/account">Konto andmed</a></li>
-    <li><a id="logout-link">Logi välja</a></li>
-</ul>
+
 
 
 <div id="container" class="container"> <!-- TODO: is class container needed? or refactor css to use id -->
@@ -44,6 +26,27 @@
 
 
 <!-- Templates -->
+<script id="tm-navbar" type="text/x-tm">
+<nav class="nav-center" role="navigation">
+    <div class="nav-wrapper">
+        <a href="/" class="brand-logo left"><img class="logo-img" src="/static/img/main-logo.svg" alt="Lahendus"/></a>
+        <ul id="nav-mobile" class="hide-on-med-and-down">
+            <li><a class="nav-link" href="/courses">{{myCourses}}</a></li>
+        </ul>
+    </div>
+    <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
+        <a href="#!">
+            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">{{userName}}</span>
+        </a>
+    </div>
+</nav>
+<!-- Profile dropdown menu structure -->
+<ul id="profile-dropdown" class="dropdown-content">
+    <li><a href="{{accountLink}}">{{account}}</a></li>
+    <li><a id="logout-link">{{logOut}}</a></li>
+</ul>
+</script>
+
 <script id="tm-stud-course-list" type="text/x-tm">
 <div class="card">
     <div id="courses-list" class="collection">
@@ -52,6 +55,7 @@
         {{/courses}}
     </div>
 </div>
+
 </script>
 
 
