wui clicking on logo should navigate to /courses

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -29,7 +29,7 @@
 <script id="tm-navbar" type="text/x-tm">
 <nav class="nav-center" role="navigation">
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo left"><img class="logo-img" src="/static/img/main-logo.svg" alt="Lahendus"/></a>
+        <a href="/courses" class="brand-logo left"><img class="logo-img" src="/static/img/main-logo.svg" alt="Lahendus"/></a>
         <ul id="nav-mobile" class="hide-on-med-and-down">
             <li><a class="nav-link" href="/courses">{{myCourses}}</a></li>
         </ul>
