E-1001 wui logout link & dynamically generate account link

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -43,7 +43,7 @@
 <!-- Profile dropdown menu structure -->
 <ul id="profile-dropdown" class="dropdown-content">
     <li><a href="{{accountLink}}">{{account}}</a></li>
-    <li><a id="logout-link">{{logOut}}</a></li>
+    <li><a href="{{logoutLink}}">{{logOut}}</a></li> <!-- TODO: logout link -->
 </ul>
 </script>
 
