--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -36,15 +36,21 @@
     </div>
     <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
         <a href="#!">
-            <i id="profile-logo" class="left material-icons">account_circle</i><span id="profile-name">{{userName}}</span>
+            <i id="profile-logo" class="left material-icons">account_circle</i>
+            <span id="profile-name">{{userName}}</span><span id="profile-role"></span>
         </a>
     </div>
 </nav>
 <!-- Profile dropdown menu structure -->
 <ul id="profile-dropdown" class="dropdown-content">
+    <span id="role-wrap"></span>
     <li><a href="{{accountLink}}">{{account}}</a></li>
-    <li><a href="{{logoutLink}}">{{logOut}}</a></li> <!-- TODO: logout link -->
+    <li><a href="{{logoutLink}}">{{logOut}}</a></li>
 </ul>
+</script>
+
+<script id="tm-role-link" type="text/x-tm">
+<li><a id="{{changeRoleId}}">{{changeRole}}</a></li>
 </script>
 
 <script id="tm-stud-course-list" type="text/x-tm">
