E-1008 wui container to 80% when sidenav is out

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -103,6 +103,7 @@
     div.sidenav-container {
         padding-left: 300px;
         max-width: unset;
+        width: 80%;
     }
 
     @media only screen and (max-width : 992px) {
