--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -66,11 +66,11 @@
 </script>
 
 <script id="tm-stud-course-list" type="text/x-tm">
-    <div id="courses-list" class="collection">
-        {{#courses}}
-        <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
-        {{/courses}}
-    </div>
+<div id="courses-list" class="collection divided-collection">
+    {{#courses}}
+    <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
+    {{/courses}}
+</div>
 </script>
 
 
@@ -85,71 +85,6 @@
 <script src="/static/js/kotlinx-serialization-kotlinx-serialization-runtime.js "></script>
 <script src="/static/js/wui.js"></script>
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
-<style>
-
-    #courses-list > a.course-item {
-        margin-bottom: 1rem;
-        box-shadow:
-                0 1px 1px 0 rgba(0,0,0,0.1),
-                0 2px 1px -2px rgba(0,0,0,0.09),
-                0 1px 3px 0 rgba(0,0,0,0.1);
-    }
-
-    #courses-list {
-        border: none;
-    }
-
-
-    div.sidenav-container {
-        padding-left: 300px;
-        max-width: unset;
-        width: 80%;
-    }
-
-    @media only screen and (max-width : 992px) {
-        div.sidenav-container {
-            padding-left: 0;
-        }
-        .sidenav-trigger {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            color: #fff;
-        }
-    }
-
-    @media only screen and (min-width: 993px) {
-        .sidenav-trigger {
-            display: none;
-        }
-    }
-
-    .sidenav > li > a, .sidenav .subheader {
-        color: #4c4c4c;
-        height: 58px;
-        line-height: 58px;
-    }
-    .sidenav > li > a {
-        font-size: 1.4rem;
-    }
-
-    .sidenav .subheader {
-        font-size: 2rem;
-        text-align: center;
-    }
-
-    .sidenav .divider {
-        margin: 0 0 8px 0;
-        height: 2px;
-        /*background-color: #fff;*/
-    }
-
-    .sidenav > li > a > i.material-icons {
-        margin-right: 15px;
-        margin-top: 5px;
-    }
-
-</style>
 
 </body>
 </html>
