wui add title to courses page

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -66,6 +66,7 @@
 </script>
 
 <script id="tm-stud-course-list" type="text/x-tm">
+<h3 class="page-title">{{title}}</h3>
 <div id="courses-list" class="collection divided-collection">
     {{#courses}}
     <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
