--- a/wui/static/placeholderpoc.html
+++ b/wui/static/placeholderpoc.html
@@ -18,19 +18,39 @@
     .loading-course-item {
         height: 6rem;
         margin: 2rem;
-        animation: pulse 2.5s infinite ease-in-out;
+        background: rgb(219, 219, 219);
+        animation: pulse 1.5s linear infinite alternate;
         border-radius: 0.5rem;
     }
 
+    .loading-course-collection .item:nth-child(1){
+        animation-delay: 0.1s;
+    }
+
+    .loading-course-collection .item:nth-child(2){
+        animation-delay: 0.3s;
+    }
+
+    .loading-course-collection .item:nth-child(3){
+        animation-delay: 0.5s;
+    }
+
+    .loading-course-collection{
+        border: none;
+        margin-top: 5rem;
+    }
+
     @keyframes pulse {
-        0% {
-            background-color: #f3f3f3;
+        from,
+        30% {
+            opacity: 0;
         }
         50% {
-            background-color: #e4e4e4;
+            opacity: 0.5;
         }
-        100% {
-            background-color: #f3f3f3;
+        90%,
+        to {
+            opacity: 1;
         }
     }
 
@@ -63,14 +83,11 @@
 
 
 <div id="container" class="container">
-    <div class="card">
-        <div id="courses-list" class="collection">
-            <div class="loading-course-item"></div>
-            <div class="loading-course-item"></div>
-            <div class="loading-course-item"></div>
+        <div class="collection loading-course-collection">
+            <div class="loading-course-item item"></div>
+            <div class="loading-course-item item"></div>
+            <div class="loading-course-item item"></div>
         </div>
-
-    </div>
 </div>
 
 
