wui loading animation/placeholders for courses

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -75,6 +75,15 @@
     </div>
 </script>
 
+<script id="tm-loading-placeholders" type="text/x-tm">
+    <div class="collection loading-collection">
+        <div class="loading-item"></div>
+        <div class="loading-item"></div>
+        <div class="loading-item"></div>
+        <div class="loading-item"></div>
+    </div>
+</script>
+
 <script id="tm-teach-course-list" type="text/x-tm">
     <div class="title-wrap">
         <h3 class="title">{{title}}</h3>
