wui refactor #container -> #content-container

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -20,7 +20,7 @@
 
 
 
-<div id="container" class="container"> <!-- TODO: is class container needed? or refactor css to use id -->
+<div id="content-container" class="container">
     Loading...
 </div>
 
