wui refactor bottom distribution bar into main css

--- a/wui/static/exdistpoc.html
+++ b/wui/static/exdistpoc.html
@@ -22,17 +22,17 @@
 <div id="content-container" class="container">
 
     <div id="courses-list" class="collection divided-collection">
-            <a class="collection-item course-item" href="/courses/a/exercises">
+            <a class="collection-item bb-wrap" href="/courses/a/exercises">
                 <span>1.1 Kes on minu president?</span>
-                <div class="dist">
-                    <span class="a d tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span><span class="w d" style="width: 0.25%"></span></span><span class="b d tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="w d" style="width: 0.25%"></span><span class="c d tooltipped" style="width: 27.5%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
+                <div class="bb">
+                    <span class="bb-green bb-item tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span><span class="bb-white bb-item" style="width: 0.25%"></span></span><span class="bb-yellow bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="bb-white bb-item" style="width: 0.25%"></span><span class="bb-grey bb-item tooltipped" style="width: 27.5%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
                 </div>
             </a>
 
-            <a class="collection-item course-item" href="/courses/a/exercises">
+            <a class="collection-item bb-wrap" href="/courses/a/exercises">
                 <span>1.2 Optic Gaming vs GenG</span>
-                <div class="dist">
-                    <span class="a d tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span></span><span class="b d tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="c d tooltipped" style="width: 28%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
+                <div class="bb">
+                    <span class="bb-green bb-item tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span></span><span class="bb-yellow bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="bb-grey bb-item tooltipped" style="width: 28%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
                 </div>
             </a>
     </div>
@@ -40,54 +40,6 @@
 </div>
 
 <style>
-
-    .collection a.course-item {
-        padding-bottom: 0;
-    }
-
-    .dist {
-        line-height: 0;
-        margin-left: -20px;
-        margin-right: -60px;
-    }
-
-    .d {
-        display: inline-block;
-        height: 20px;
-    }
-
-    .a {
-        border-bottom: 7px solid #4DAB54;
-    }
-
-    .b {
-        border-bottom: 7px solid #ffd052;
-    }
-
-    .c {
-        border-bottom: 7px solid #c1c1c1;
-    }
-
-    .w {
-        border-bottom: 7px solid #fff;
-    }
-
-    .material-tooltip {
-        font-size: 1.6rem;
-    }
-
-    .collection a.collection-item:not(.active):hover {
-        background-color: #e5e5e5;
-    }
-
-    .divided-collection .collection-item {
-        border-bottom: none;
-    }
-
-    .divided-collection {
-        overflow: unset;
-    }
-
 
 
 
