--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -88,6 +88,9 @@
 </script>
 
 <script id="tm-stud-exercises-list" type="text/x-tm">
+    <div class="title-wrap">
+        <h3 class="title">{{title}}</h3>
+    </div>
     <div id="exercises-list" class="collection divided-collection">
         {{#exercises}}
         <a class="collection-item bb-wrap row" href="{{link}}">
