wui student exercises add crumb & improve spacing

--- a/wui/static/exdistpoc.html
+++ b/wui/static/exdistpoc.html
@@ -56,6 +56,11 @@
 <!--        </a>-->
 <!--    </div>-->
 
+    <nav class="crumb-wrap">
+        <a href="#!" class="breadcrumb">Kursused</a>
+        <a class="breadcrumb">Programmeerimine</a>
+    </nav>
+
     <div id="exercises-list" class="collection divided-collection">
         <a class="collection-item bb-wrap row" href="asd">
             <span class="col s6">1.1 Wutwut</span>
