--- a/wui/static/exdistpoc.html
+++ b/wui/static/exdistpoc.html
@@ -64,10 +64,9 @@
     <div id="exercises-list" class="collection divided-collection">
         <a class="collection-item bb-wrap row" href="asd">
             <span class="col s6">1.1 Wutwut</span>
-            <span class="col s4 deadline">1. juuli 2019, 11.11</span>
+            <span class="col s4 deadline"><span class="tooltipped" data-position="bottom" data-tooltip="Tähtaeg">1. juuli 2019, 11.11</span></span>
             <span class="col s2 grade">
-               <span class="">6/100</span>
-                <span class="" style="">
+               <span class="">6/100</span><span class="" style="">
 <!--                        <img class="tooltipped eval-logo-auto" src="/static/img/robot-logo.svg" data-position="bottom"-->
 <!--                             data-tooltip="asd" alt="asd"/>-->
                         <i class="material-icons eval-logo-teacher">face</i>
@@ -86,8 +85,7 @@
             <span class="col s4 deadline">1. juuli 2019, 11.11</span>
             <span class="col s2 grade">
                <span class="">6/100</span>
-                <span class="" style="">
-                        <img class="tooltipped eval-logo-auto" src="../../doc/wui/design/auto_icon_1_v2_v1.svg" data-position="bottom"
+                <span class="" style=""><img class="tooltipped eval-logo-auto" src="../../doc/wui/design/auto_icon_1_v2_v1.svg" data-position="bottom"
                              data-tooltip="asd" alt="asd"/>
                     <!--                        <i class="material-icons eval-logo-teacher">face</i>-->
                 </span>
@@ -104,11 +102,9 @@
             <span class="col s6">1.1 Wutwut</span>
             <span class="col s4 deadline">1. juuli 2019, 11.11</span>
             <span class="col s2 grade">
-               <span class="">6/100</span>
-                <span class="" style="">
+               <span class="">6/100</span><span class="" style="">
                         <img class="tooltipped eval-logo-missing" src="../../doc/wui/design/missing_feedback_v3.svg" data-position="bottom"
                              data-tooltip="asd" alt="asd"/>
-                    <!--                        <i class="material-icons eval-logo-teacher">face</i>-->
                 </span>
 
             </span>
@@ -119,6 +115,16 @@
             </div>
         </a>
 
+        <a class="collection-item bb-wrap row" href="asd">
+            <span class="col s6">1.1 Wutwut</span>
+            <span class="col s4 deadline">1. juuli 2019, 11.11</span>
+            <span class="col s2 grade">
+               <span class="" style="margin-right: 34px;">6/100</span>
+            </span>
+            <div class="bb">
+                    <span class="bb-green bb-item" style="width: 100%">
+            </div>
+        </a>
 
 
     </div>
@@ -269,8 +275,8 @@
 
 <script>
     M.Tooltip.init(document.querySelectorAll(".tooltipped"), {
-        margin: 0,
-        transitionMovement: 10
+        // margin: 0,
+        // transitionMovement: 10
     });
 </script>
 </body>
