wui student exercises list template placeholder name link -> href

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -97,7 +97,7 @@
     </div>
     <div id="exercises-list" class="collection divided-collection">
         {{#exercises}}
-        <a class="collection-item bb-wrap row" href="{{link}}">
+        <a class="collection-item bb-wrap row" href="{{href}}">
             <span class="col s6">{{title}}</span>
             <span class="col s4 deadline"><span class="tooltipped" data-position="bottom" data-tooltip="{{deadlineLabel}}">{{deadline}}</span></span>
             <span class="col s2 grade">
